--- a/xiaomi.css
+++ b/xiaomi.css
@@ -28,10 +28,12 @@ body {
     height: 40px;
     background-color: #333;
     line-height: 40px;
+    overflow: hidden;
 }
 
 .black_nav a {
     color: #b0b0b0;
+    font-size: 14px;
 }
 
 .black_nav_ul_left {
@@ -44,12 +46,12 @@ body {
 
 .black_nav_ul_left li {
     float: left;
-    padding: 0 8px;
+    padding: 0 5px;
     position: relative;
 }
 
 .black_nav_ul_right li {
-    padding: 0 8px;
+    padding: 0 3px;
     float: left;
 }
 
@@ -231,7 +233,9 @@ body {
     width: 100%;
     background-color: white;
 }
-
+.banner .warp{
+    position: relative;
+}
 .banner-img {
     width: 1012px;
     height: 460px;
@@ -270,7 +274,8 @@ body {
     height: 440px;
     padding-top: 20px;
     position: absolute;
-    left: 340px;
+    left: 0;
+    top: 0;
     line-height: 40px;
     background-color: rgba(105, 101, 101, .6);
     color: #fff;
@@ -346,11 +351,9 @@ body {
     padding-top: 15px;
     padding-bottom: 20px;
     width: 100%;
-    height: 132px;
     display: flex;
     justify-content: center;
-    position: relative;
-    clear: both;
+    height: 132px;
     background-color: white;
 }
 
@@ -363,12 +366,12 @@ body {
 }
 
 .ad-list {
-    display: flex;
     background-color: #5f5750;
     color: #b0b0b0;
     width: 230px;
     height: 132px;
-    position: absolute;
+    display: inline-block;
+    float: left;
 }
 
 .ad-list a {
@@ -392,24 +395,21 @@ body {
 }
 
 .ad-card1 {
-    left: 0;
-    position: absolute;
+    float: left;
     width: 245px;
     height: 132px;
     margin-left: 15px;
 }
 
 .ad-card2 {
-    left: 260px;
-    position: absolute;
+    float: left;
     width: 245px;
     height: 132px;
     margin-left: 15px;
 }
 
 .ad-card3 {
-    left: 520px;
-    position: absolute;
+    float: left;
     width: 245px;
     height: 132px;
     margin-left: 15px;
@@ -428,14 +428,13 @@ body {
 
 .ad-box {
     width: 100%;
-    position: relative;
     float: left;
-
+    height: 132px;
+    overflow: hidden;
 }
 
 .ad-card-list {
-    position: absolute;
-    left: 230px;
+    float: left;
 }
 
 /*广告卡结束*/
@@ -658,7 +657,8 @@ body {
     width: 20%;
     height: 75px;
     position: relative;
-    padding: 0 55px;
+    line-height: 75px;
+    margin: 0 auto;
     box-sizing: border-box;
 }
 .footer-top-list li:last-child{
@@ -667,12 +667,11 @@ body {
 .footer-top-list li span{
     font-size: 26px;
     color: #b0b0b0;
-    float: left;
 }
 .footer-top-list li p{
     font-size: 14px;
     color: #b0b0b0;
-    float: right;
+    display: inline;
 }
 .footer-top-list li:hover span,.footer-top-list li:hover p{
     color: #ff6700;
